--- a/src/styles/_button.scss
+++ b/src/styles/_button.scss
@@ -3,7 +3,7 @@
 .btn {
     height: 40px;
     min-width: 100px;
-    font-size: 14px;
+    font-size: $font-16;
     border: none;
     padding: 10px 20px;
     text-align: center;
