--- a/styles.css
+++ b/styles.css
@@ -39,7 +39,7 @@
 .btn {
   height: 40px;
   min-width: 100px;
-  font-size: 14px;
+  font-size: 1em;
   border: none;
   padding: 10px 20px;
   text-align: center;
@@ -90,9 +90,24 @@ body {
   padding: 40px;
 }
 
-/*
-    FOOTER
-*/
+.skip-link {
+  position: absolute;
+  top: -40px;
+  left: 0;
+  background: #0a1930;
+  color: white;
+  padding: 8px;
+  z-index: 100;
+}
+
+.skip-link:focus {
+  top: 0;
+}
+
+a {
+  font-size: 1em;
+}
+
 footer {
   display: flex;
   flex-direction: column;
