--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,7 @@
 }
 .btn--green {
   background-color: #4CAF50;
-  color: #FFF;
+  color: #000;
 }
 
 .input {
@@ -95,7 +95,7 @@ body {
   top: -40px;
   left: 0;
   background: #0a1930;
-  color: white;
+  color: #FFF;
   padding: 8px;
   z-index: 100;
 }
@@ -106,6 +106,15 @@ body {
 
 a {
   font-size: 1em;
+}
+a :hover {
+  color: #DC143C;
+}
+a :active {
+  color: #FFF;
+}
+a :visited {
+  color: #FFF;
 }
 
 footer {
