--- a/src/styles/_input.scss
+++ b/src/styles/_input.scss
@@ -1,10 +1,11 @@
 @import './variables';
 
 .input {
+    margin: 8px 0;
     padding: 0 .5em 0 .75em;
     border-radius: 100px;
     position: relative;
-    min-width: 400px;
+    min-width: 340px;
     height: 40px;
     border-width:0px;
     border:none;
