--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,8 @@
   align-items: center;
   justify-content: center;
   margin: 0 16px;
+  transition-timing-function: ease-in;
+  transition: 0.2s;
 }
 .progress__text {
   top: 28px;
@@ -36,6 +38,26 @@
   transition: stroke-dasharray 0.7s linear 0s;
 }
 
+.loading {
+  display: flex;
+  margin: 24px 0;
+  padding: 40px;
+  transition-timing-function: ease-in;
+}
+.loading__circle {
+  height: 160px;
+  width: 160px;
+  background-color: #273356;
+  margin: 0 16px;
+  border-radius: 50%;
+  animation: blinker 2s linear infinite;
+}
+
+@keyframes blinker {
+  50% {
+    opacity: 0;
+  }
+}
 .btn {
   height: 40px;
   min-width: 100px;
