--- a/src/styles/_circle.scss
+++ b/src/styles/_circle.scss
@@ -45,7 +45,7 @@
 }
 
 .loading {
-    display: flex;
+    display: none;
     margin: 24px 0;
     padding: 40px;
     transition-timing-function: ease-in;
