--- a/src/styles/_circle.scss
+++ b/src/styles/_circle.scss
@@ -23,6 +23,10 @@
         margin: 8px;
         font-size: .875em;
     }
+
+    @media screen and (max-width: 1084px) {
+        margin-top: 40px;
+    }
 }
 
 .progress__circle {
@@ -56,6 +60,17 @@
         margin: 0 16px;
         border-radius: 50%;
         animation: blinker 2s linear infinite;
+        @media screen and (max-width: 1084px) {
+            margin-top: 8px;
+        }
+    }
+
+    @media screen and (max-width: 1084px) {
+        margin-top: 0;
+        padding: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
 }
   
